--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "typescript": "~4.5.4"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@fontsource/inter": "^5.0.8",
+    "@mui/joy": "^5.0.0-beta.8",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "electron-squirrel-startup": "^1.0.0",
     "react": "^18.2.0",
