--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@mui/joy": "^5.0.0-beta.8",
     "@vitejs/plugin-react-swc": "^3.4.0",
     "electron-squirrel-startup": "^1.0.0",
+    "knex": "^2.5.1",
+    "pg": "^8.11.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
