--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@electron-forge/plugin-vite": "^6.4.2",
     "@types/react": "^18.2.23",
     "@types/react-dom": "^18.2.8",
+    "@types/uuid": "^9.0.4",
     "@typescript-eslint/eslint-plugin": "^6.7.3",
     "@typescript-eslint/parser": "^6.7.3",
     "electron": "26.3.0",
@@ -48,7 +49,8 @@
     "knex": "^2.5.1",
     "pg": "^8.11.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "uuid": "^9.0.1"
   },
   "lint-staged": {
     "**/*.ts": "eslint --fix",
